# xmlo3

./: Cargo.toml  pyproject.toml  test.py  test_xmlo3.py  xmlo3.pyi
files/: note.xml
src/: bindings.rs  errors.rs  lib.rs  main.rs  parser.rs
