[package]
name = "xmlo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xmlo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pythonize = "0.19.0"
roxmltree = "0.18.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
xmlparser = "0.13.5"
